--- a/environment.yaml
+++ b/environment.yaml
@@ -1,8 +1,11 @@
-name: dstoolbox
+name: project-env
 channels:
   - conda-forge
   - defaults
 dependencies:
   - jupyterlab
-  - scikit-learn=1.3.0
+  - scikit-learn
+  - python=3.10
+  - matplotlib
+  - pandas
 prefix: /opt/miniconda3/envs/dstoolbox
